@@ -10,8 +10,8 @@
 
 AC_INIT(autogen.sh)
 
-VERSION="0.4.6"
-LT_VERSION="0:22:0"
+VERSION="0.5.0"
+LT_VERSION="0:23:0"
 
 UCOMMON_REQUIRES="2.0.0"
 
